--- a/css/style.production.css
+++ b/css/style.production.css
@@ -357,3 +357,44 @@ button:focus,
     font-size: 22px;
   }
 } 
+   .navigation-list li {
+ margin-left: -1em;
+       margin-right:2em;
+}
+    }
+
+@media all and (min-width: 375px) and (max-width: 424px) { 
+   .navigation-list li {
+ margin-left: 2em;
+       margin-right:4em
+}
+    }
+
+@media all and (min-width: 425px) and (max-width: 767px) { 
+   .navigation-list li {
+ margin-left: -1.2em;
+       margin-right: 2em;
+
+}
+    }
+
+@media all and (min-width: 768px) and (max-width: 1023px) { 
+   .navigation-list li {
+ margin-left: -4.9em;
+     
+}
+    }
+
+@media all and (min-width: 1024px) and (max-width: 1534px) { 
+   .navigation-list li {
+ margin-left: -1em;
+     
+}
+    }
+
+@media all and (min-width: 1440px) and (max-width: 1535px) { 
+   .navigation-list li {
+ margin-left: 4em;
+     
+}
+    }
